--- a/public/index.html
+++ b/public/index.html
@@ -98,7 +98,9 @@
     <!-- Администрирование -->
     <div id="admin" class="content">
         <button onclick="app.admin.showCreateUserForm()">➕ Создать пользователя</button>
-        <div id="users-table" class="loading">Загрузка...</div>
+        <div id="users-table">
+            <div class="loading">Загрузка...</div>
+        </div>
         <div id="users-pagination" class="pagination hidden"></div>
     </div>
 </div>
@@ -155,7 +157,7 @@
         },
 
         // Переключение вкладок
-        showTab(tab) {
+        async showTab(tab) {
             document.querySelectorAll('.content').forEach(c => c.classList.remove('active'));
             document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
 
@@ -176,7 +178,11 @@
             };
 
             if (loaders[tab]) {
-                loaders[tab]();
+                try {
+                    await loaders[tab]();
+                } catch (err) {
+                    console.error(`Ошибка загрузки данных для вкладки ${tab}:`, err);
+                }
             }
         },
 
@@ -938,16 +944,40 @@
         // Администрирование
         admin: {
             async load() {
-                if (app.state.currentUser.role !== 'admin') return;
+                const container = document.getElementById('users-table');
+
+                if (app.state.currentUser.role !== 'admin') {
+                    container.innerHTML = `
+                        <div class="empty">
+                            <h3>🔒 Доступ ограничен</h3>
+                            <p>Только администраторы могут просматривать эту страницу</p>
+                        </div>
+                    `;
+                    return;
+                }
 
                 try {
+                    container.innerHTML = '<div class="loading">Загрузка пользователей...</div>';
+
                     const res = await fetch('/api/admin/users');
                     const data = await res.json();
 
-                    app.state.users = data.users;
+                    if (!res.ok) {
+                        throw new Error(data.error || 'Ошибка загрузки пользователей');
+                    }
+
+                    app.state.users = data.users || [];
                     this.render();
                 } catch (err) {
-                    app.showAlert('error', 'Ошибка загрузки пользователей');
+                    console.error('Ошибка загрузки пользователей:', err);
+                    container.innerHTML = `
+                        <div class="empty" style="color: #dc3545;">
+                            <h3>❌ Ошибка загрузки</h3>
+                            <p>${err.message}</p>
+                            <button onclick="app.admin.load()" style="margin-top: 10px;">🔄 Попробовать снова</button>
+                        </div>
+                    `;
+                    app.showAlert('error', 'Ошибка загрузки пользователей: ' + err.message);
                 }
             },
 
@@ -955,36 +985,53 @@
                 const container = document.getElementById('users-table');
                 const users = app.state.users;
 
+                if (!users || users.length === 0) {
+                    container.innerHTML = `
+                        <div class="empty">
+                            <h3>👥 Пользователи не найдены</h3>
+                            <p>Создайте первого пользователя</p>
+                            <button onclick="app.admin.showCreateUserForm()" style="margin-top: 15px;">➕ Создать пользователя</button>
+                        </div>
+                    `;
+                    return;
+                }
+
                 container.innerHTML = `
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Пользователь</th>
-                            <th>Роль</th>
-                            <th>Email</th>
-                            <th>Статус</th>
-                            <th>Действия</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        ${users.map(u => `
+                <div class="table-container">
+                    <div class="table-header">
+                        <span>Пользователи системы</span>
+                        <span>${users.length}</span>
+                    </div>
+                    <table>
+                        <thead>
                             <tr>
-                                <td>
-                                    <strong>${u.fullName}</strong><br>
-                                    <small>@${u.username}</small>
-                                </td>
-                                <td><span class="role-${u.role}">${app.getRoleText(u.role)}</span></td>
-                                <td>${u.email || 'Не указан'}</td>
-                                <td><span class="status-${u.isActive ? 'active' : 'blocked'}">${u.isActive ? 'Активен' : 'Заблокирован'}</span></td>
-                                <td>
-                                    <button onclick="app.admin.resetPassword(${u.id})">🔑</button>
-                                    <button onclick="app.admin.toggleStatus(${u.id}, ${u.isActive})" ${u.id === app.state.currentUser.id ? 'disabled' : ''}>${u.isActive ? '🔒' : '🔓'}</button>
-                                    ${u.id !== app.state.currentUser.id ? `<button onclick="app.admin.deleteUser(${u.id})">🗑️</button>` : ''}
-                                </td>
+                                <th>Пользователь</th>
+                                <th>Роль</th>
+                                <th>Email</th>
+                                <th>Статус</th>
+                                <th>Действия</th>
                             </tr>
-                        `).join('')}
-                    </tbody>
-                </table>
+                        </thead>
+                        <tbody>
+                            ${users.map(u => `
+                                <tr>
+                                    <td>
+                                        <strong>${u.fullName}</strong><br>
+                                        <small>@${u.username}</small>
+                                    </td>
+                                    <td><span class="role-${u.role}">${app.getRoleText(u.role)}</span></td>
+                                    <td>${u.email || 'Не указан'}</td>
+                                    <td><span class="status-${u.isActive ? 'active' : 'blocked'}">${u.isActive ? 'Активен' : 'Заблокирован'}</span></td>
+                                    <td>
+                                        <button onclick="app.admin.resetPassword(${u.id})" title="Сбросить пароль">🔑</button>
+                                        <button onclick="app.admin.toggleStatus(${u.id}, ${u.isActive})" ${u.id === app.state.currentUser.id ? 'disabled' : ''} title="${u.isActive ? 'Заблокировать' : 'Разблокировать'}">${u.isActive ? '🔒' : '🔓'}</button>
+                                        ${u.id !== app.state.currentUser.id ? `<button onclick="app.admin.deleteUser(${u.id})" title="Удалить">🗑️</button>` : ''}
+                                    </td>
+                                </tr>
+                            `).join('')}
+                        </tbody>
+                    </table>
+                </div>
             `;
             },
 
@@ -1089,11 +1136,25 @@
             const user = this.state.currentUser;
             document.getElementById('user-badge').textContent = `${user.fullName} (${this.getRoleText(user.role)})`;
 
+            // Управление доступом к вкладкам
+            const adminTab = document.querySelector('[data-tab="admin"]');
+
             if (user.role === 'skd') {
-                document.querySelectorAll('.tab').forEach(t => t.disabled = !['scanner'].includes(t.dataset.tab));
+                // СКД видит только сканер
+                document.querySelectorAll('.tab').forEach(t => {
+                    t.disabled = !['scanner'].includes(t.dataset.tab);
+                });
                 this.showTab('scanner');
             } else if (user.role === 'admin') {
-                document.querySelector('[data-tab="admin"]').disabled = false;
+                // Админ видит все, включая администрирование
+                document.querySelectorAll('.tab').forEach(t => t.disabled = false);
+                if (adminTab) adminTab.disabled = false;
+            } else if (user.role === 'moderator') {
+                // Модератор видит все кроме администрирования
+                document.querySelectorAll('.tab').forEach(t => {
+                    t.disabled = t.dataset.tab === 'admin';
+                });
+                if (adminTab) adminTab.disabled = true;
             }
         },
 
